@@ -228,10 +228,10 @@ namespace mesmer
     bool DoCalculationOld(System* pSys); 
 
     // This methods writes out the results of a sensitivity analysis.
-    bool WriteOutAnalysis(const vector<double> &f0, const vector<double> &alpha, double Temperature, double Concentration); 
+    bool WriteOutAnalysis(const vector<string> &rxnId, const vector<double> &f0, const vector<double> &alpha, double Temperature, double Concentration) ;
 
     // This method calculates sensitivity indicies.
-    bool sensitivityIndicies(const vector<double> &f0, const vector<double> &alpha); 
+    bool sensitivityIndicies(const vector<double> &f0, const vector<double> &alpha, const vector<double> &beta); 
 
     // Methods for generating values of shifted Legendre polynomials.
     typedef double (*slp)(const double &x) ;
@@ -250,7 +250,8 @@ namespace mesmer
 
     size_t m_order ;               // The order of the HDMR analysis to use.
 
-    vector<vector<double> > m_Di ; // First order sensitivities.
+    vector<vector<double> > m_Di ;  // First order sensitivities.
+    vector<vector<double> > m_Dij ; // Second order sensitivities.
 
   };
 
@@ -389,18 +390,17 @@ namespace mesmer
 
     m_nVar = Rdouble::withRange().size() ;
 
-    if (m_nVar < 1) { 
-      cerr << "Sensitivity analysis requries at least one range variable to be set." << endl;
+    if (m_nVar < 2) { 
+      cerr << "Sensitivity analysis requries at least two range variables to be set." << endl;
       return false ;
     }
 
     //Read variable uncertainties from range
     for (size_t iVar(0) ; iVar < m_nVar ; iVar++) {
       Rdouble var = *Rdouble::withRange()[iVar] ;
-      double lower = var - var.get_stepsize() ;
-      double upper = var + var.get_stepsize() ;
-      double middle = upper-((upper - lower) / 2.0);
-      m_delta.push_back(abs((middle - lower) / middle));
+      double lower = var.get_lower();
+      double upper = var.get_upper();
+      m_delta.push_back(abs((upper - lower)/2.0 ));
     }
 
     //Do not output all the intermediate results to XML
@@ -420,13 +420,13 @@ namespace mesmer
     // Begin by finding the starting point chi-squared value.
     //
 
-    vector<double> currentLocation(m_nVar,0.0) ; 
+    vector<double> originalLocation(m_nVar,0.0) ; 
     vector<double> newLocation(m_nVar,0.0) ; 
 
-    GetLocation(currentLocation) ;
+    GetLocation(originalLocation) ;
 
     // Invoke SetLocation to catch any constrained parameters.
-    SetLocation(currentLocation) ;
+    SetLocation(originalLocation) ;
 
     vector<double> Temperature ;
     vector<double> Concentration ;
@@ -439,8 +439,12 @@ namespace mesmer
     size_t nConditions = Temperature.size() ;
     for (size_t nCnd(0) ; nCnd < nConditions ; nCnd++) {
 
-      vector<double> f0 ;
-      vector<double> alpha ;
+      m_Di.clear() ;
+      m_Dij.clear() ;
+
+      vector<double> f0, f02, varf ;
+      vector<double> alpha, beta ;
+      vector<string> rxnId ;
       bool f0Initialized(false) ;
 
       // Loop over perturbed parameter values.
@@ -449,122 +453,112 @@ namespace mesmer
       long long seed(0) ;
       for (size_t itr(1) ; itr <= m_maxIterations ; itr++) {
         vector<double> rndmd(m_nVar,0.0) ;
-        sobol.sobol(rndmd.size(), &seed, rndmd) ;
+        sobol.sobol(m_nVar, &seed, rndmd) ;
 
         // Use random vector generated by sobol method to perturb parameter values.
 
         for (size_t j(0) ; j < rndmd.size() ; j++) {
-          newLocation[j] = currentLocation[j]*(1.0 + (m_delta[j])*(rndmd[j] - 0.5)) ;
+          newLocation[j] = originalLocation[j] + m_delta[j]*(rndmd[j] - 0.5) ;
         }
 
         // Set perturbed parameters and calculate new quantities.
 
         SetLocation(newLocation) ;
-        vector<double> Quantities ;
-        pSys->calculate(nCnd, Quantities, false) ;
+        map<string, double> phenRates ;
+        pSys->calculate(nCnd, phenRates);
 
         if (!f0Initialized) {
-		  m_nOut = Quantities.size() ;
+          m_nOut = phenRates.size() ;
           f0.resize(m_nOut, 0.0) ;
+          f02.resize(m_nOut, 0.0) ;
+          varf.resize(m_nOut, 0.0) ;
           alpha.resize(m_nOut*m_nVar*m_order, 0.0) ;
+          beta.resize(m_nOut*m_nVar*m_nVar*m_order, 0.0) ;
+          map<string, double>::const_iterator irxn = phenRates.begin();
+          for (; irxn != phenRates.end(); irxn++) {
+            rxnId.push_back(irxn->first) ;
+          }
           f0Initialized = true ;
         }
 
-        // Calculate alpha values.
-        for (size_t i(0), idx(0) ; i < Quantities.size() ; i++) {
+        // Calculate alpha values.		
+        map<string, double>::const_iterator irxn = phenRates.begin();
+        for (size_t i(0), ida(0), idb(0) ; irxn != phenRates.end(); irxn++, i++) {
 
-          double output = Quantities[i] ;
-          f0[i] += output ;
+          double output = irxn->second ;
+          f0[i]  += output ;
+          f02[i] += output*output ;
 
           for (size_t j(0) ; j < rndmd.size() ; j++) {
 
             double input = rndmd[j] ;
 
-            // Calculate all alpha coefficients for the up to m_order order polynomials.
-            for (size_t k(1) ; k <= m_order ; k++, idx++) {
-              alpha[idx] += output * ShiftedLegendre(k, input) ;
+            // Calculate all alpha and beta coefficients for the up to m_order polynomials.
+
+			for (size_t k(1) ; k <= m_order ; k++, ida++) {
+              double tmp = output * ShiftedLegendre(k, input) ;
+              alpha[ida] += tmp ;
+              for (size_t l(1) ; l <= m_order ; l++, idb++) {
+                beta[idb] += tmp * ShiftedLegendre(l, input); 
+              }
             }
           }
         }
-
-        // Calculate beta values.
-
-        //number_inputs=size(input_norm,2);
-        //number_outputs=size(output_mc,2);
-
-        //% sample size
-        //N=size(input_norm,1);
-
-        //% number of second order component functions fij
-        //n_ij=((number_inputs-1)*number_inputs)/2;
-
-        //% initialise beta
-        //beta = zeros(n_ij,order^2,number_outputs);
-
-        //% calculate table for ij-numbers
-        //lfdnr=1;
-        //for l=1:1:(number_inputs-1)
-        // for k=1:1:(number_inputs-l)
-        //  i(lfdnr)=l;
-        //  j(lfdnr)=k+l;
-        //  lfdnr=lfdnr+1;
-        // end
-        //end
-
-        //% calculate beta
-        //for out=1:1:number_outputs
-        // for in=1:1:n_ij
-
-        //  % calculate the orthonormal polyonmials beforehand to reduce the number of calls for these functions 
-        //  for k=1:order
-        //   phi1(:,k) = eval(['ortho_poly_' num2str(k) '(input_norm(:,i(in)))']);
-        //   phi2(:,k) = eval(['ortho_poly_' num2str(k) '(input_norm(:,j(in)))']);
-        //  end
-
-        //  % calculate all beta coeffiencts for the up to 10th order polynomials
-        //  for k=1:order^2
-        //   beta(in,k,out) = 1/N*sum(output_mc(:,out).*phi1(:,beta_number(k,1)).*phi2(:,beta_number(k,2))); 
-        //  end
-
-        // end
-        //end
       }
 
       for (size_t i(0) ; i < alpha.size() ; i++) 
         alpha[i] *= nrmlFctr ;
 
-      // Calculate mean values of the outputs.
-      for (size_t i(0) ; i < f0.size() ; i++) 
-        f0[i] *= nrmlFctr ;
+      for (size_t i(0) ; i < beta.size() ; i++) 
+        beta[i] *= nrmlFctr ;
 
-      sensitivityIndicies(f0, alpha) ;
+      // Calculate the variance of the outputs.
+      for (size_t i(0) ; i < f0.size() ; i++) {
+        f0[i]  *= nrmlFctr ;
+        f02[i] *= nrmlFctr ;
+        varf[i] = f02[i] - f0[i]*f0[i] ;
+      }
 
-      WriteOutAnalysis(f0, alpha, Temperature[nCnd], Concentration[nCnd]) ;
+      sensitivityIndicies(varf, alpha, beta) ;
+
+      WriteOutAnalysis(rxnId, f0, alpha, Temperature[nCnd], Concentration[nCnd]) ;
     }
 
     return true;
   }
 
   // This method calculates sensitivity indicies.
-  bool SensitivityAnalysis::sensitivityIndicies(const vector<double> &f0, const vector<double> &alpha) {
+  bool SensitivityAnalysis::sensitivityIndicies(const vector<double> &varf, const vector<double> &alpha, const vector<double> &beta) {
 
-    for (size_t i(0), idx(0) ; i < m_nOut ; i++) {
-	  vector<double> tmp ;
+    for (size_t i(0), ida(0), idb(0) ; i < m_nOut ; i++) {
+      vector<double> tma, tmb ;
       for (size_t j(0) ; j < m_nVar ; j++) {
-        double sum(0.0) ;
-        for (size_t k(1) ; k <= m_order ; k++, idx++) {
-          sum += alpha[idx]*alpha[idx] ;
+        double sma(0.0) ;
+        for (size_t k(1) ; k <= m_order ; k++, ida++) {
+
+		  // First order indicies.
+
+          sma += alpha[ida]*alpha[ida] ;
+		  
+		  // Second order indicies.
+
+		  double smb(0.0) ;
+          for (size_t l(1) ; l <= m_order ; l++, idb++) {
+            smb += beta[idb]*beta[idb];
+		  }
+          tmb.push_back(smb/varf[i]) ;
         }
-        tmp.push_back(sum) ;
+        tma.push_back(sma/varf[i]) ;
       }
-	  m_Di.push_back(tmp) ;
+      m_Di.push_back(tma) ;
+      m_Dij.push_back(tmb) ;
     }
 
-	return true ;
+    return true ;
   }
 
   // This method generates data for external analysis.
-  bool SensitivityAnalysis::WriteOutAnalysis(const vector<double> &f0, const vector<double> &alpha, double Temperature, double Concentration) {
+  bool SensitivityAnalysis::WriteOutAnalysis(const vector<string> &rxnId, const vector<double> &f0, const vector<double> &alpha, double Temperature, double Concentration) {
 
     cinfo << endl << "Sensitivity Analysis: Temperature = " << setw(8) << setprecision(4) << Temperature << ", Concentration = " << Concentration << endl << endl;
 
@@ -581,18 +575,34 @@ namespace mesmer
       cinfo << "Alpha = " << setprecision(6) << alpha[i] << endl;
     }
 
-    // Sensistivity indicies.
+    // First order sensistivity indicies.
 
     cinfo << endl;
     for (size_t i(0) ; i < m_nOut ; i++) {
-	  vector<double> &tmp = m_Di[i] ;
-      cinfo << " Sensitivity Indicies: " ;
+      vector<double> &tmp = m_Di[i] ;
+      cinfo << " " << rxnId[i] << ": " ;
       for (size_t j(0) ; j < m_nVar ; j++) {
         cinfo << formatFloat(tmp[j], 5, 15) ;
       }
       cinfo << endl;
     }
+ 
+	// Second order sensistivity indicies.
+
     cinfo << endl;
+    for (size_t i(0) ; i < m_nOut ; i++) {
+      vector<double> &tmp = m_Dij[i] ;
+      cinfo << " " << rxnId[i] << ": " ;
+      for (size_t j(0), idx(0) ; j < m_nVar ; j++) {
+        for (size_t k(0) ; k < m_nVar ; k++, idx++) {
+          cinfo << formatFloat(tmp[idx], 5, 15) ;
+		}
+        cinfo << endl;
+      }
+      cinfo << endl;
+    }
+
+	cinfo << endl;
 
     return true ;
   }
